fix for bottom row align

--- a/styles/app.css
+++ b/styles/app.css
@@ -34,11 +34,13 @@ border: 1px lightgrey solid;
 margin: auto;
   width: 2rem;
   overflow: auto;
+  vertical-align: middle;
 }
 
 .number {
 float: left;
-line-height: 3rem;
+line-height: 2rem;
+vertical-align: middle;
 }
 .name {
   float: right;
